<?xml version="1.0"?>
<package>
  <name> eus_lp </name>
  <description>
    eus_lp package
  </description>
  <version>0.0.1</version>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">Noda Shintaro</maintainer>
  <license>NYLS</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <!--
  <build_depend>lp_solve</build_depend>
  <build_depend>liblpsolve55-dev</build_depend>
  <build_depend>coinor-libclp-dev</build_depend>
  -->
<!--  <build_depend>mumps</build_depend> -->

  <run_depend>euslisp</run_depend>
  <!--
  <run_depend>lp_solve</run_depend>
  <run_depend>liblpsolve55-dev</run_depend>
  <run_depend>coinor-libclp-dev</run_depend>
  -->
<!--  <run_depend>mumps</run_depend> -->
</package>
